# PeSDR

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db-init/: 00-extensions.sql  01-create-app-role.sql  02-widen-alembic-version.sql
demos/2026-06-16-form-crm-skeleton/: AGENT_ROLES.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDELINES.md  README.md  TESTING_STRATEGY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  flow.test.tsx  index.css  interactive.test.tsx  live.test.tsx  main.tsx  theme.css  types.ts
migrations/: env.py
migrations/versions/: 0001_extensions.py  0002_tenants_table.py  0003_treeflow_tables.py  0004_checkpointer_setup.py  0005_kb_tables.py  0006_leads_table.py  0007_inbound_messages_table.py  0008_talkflows_lead_id_fk.py  0009_users_and_access.py  0010_follow_up_and_talkflow_columns.py  0011_outbound_messages.py  0012_extend_leads_with_identity_fields.py  0013_create_talks_table.py  0014_create_talkflow_states_table.py  0015_create_events_table.py  0016_create_experiments_table.py  0017_create_response_reviews_table.py  0018_create_sentinel_reviews_table.py  0019_create_adapter_calls_table.py  0020_create_treeflow_improvement_suggestions_table.py  0021_extend_outbound_messages_with_media.py  0022_extend_inbound_messages_with_media.py  0023_add_tenant_architecture_version.py  0024_relax_outbound_talkflow_fk.py  0025_talks_requires_review_reason.py  0026_talks_status_lifecycle_values.py  0027_talks_closed_by_lifecycle_values.py  0028_action_executions.py  0029_leads_inbound_channel_label.py  0030_extend_outbound_message_type_audio.py  0031_add_voice_synthesis_failed_reason.py  0032_instances.py  0032_sandbox_flags.py  0033_form_ingestion_and_crm_refs.py  0033_operator_read_markers.py  0034_inbox_indexes.py  0035_talks_assigned_operator.py  0036_outbound_operator_send.py  0037_sandbox_flags.py  0038_form_ingestion_and_crm_refs.py
scripts/: seed_avelum_v2.py  seed_manoela_v2.py
src/ai_sdr/: logging_setup.py  main.py  settings.py
tenants/avelum/: tenant.yaml
tenants/example/: secrets.enc.yaml  tenant.yaml
tenants/joana-mentora/: tenant.yaml
tenants/manoela-mentora/: secrets.enc.yaml  tenant.yaml
tenants/manuela-mentora/: tenant.yaml
tests/: conftest.py
tests/fixtures/: avelum_tenant_v2.yaml  avelum_treeflow_v2.yaml  avelum_treeflow_v2_minimal.yaml  avelum_v2_node_objections.yaml  avelum_v2_with_lifecycle.yaml  avelum_v2_with_objections.yaml  canned_decisions.py  treeflow_invalid_completion_expression.yaml  treeflow_invalid_iso_duration.yaml  treeflow_invalid_max_turns.yaml  treeflow_invalid_outcome.yaml  treeflow_invalid_treatment_mode.yaml  treeflow_missing_tool_payload.yaml
tests/integration/: avelum_helpers.py  conftest.py  test_action_dispatcher_end_to_end.py  test_action_executions_rls.py  test_adapter_compliance.py  test_advisory_lock_serialization.py  test_all_migrations_apply_clean.py  test_audit_audio.py  test_audit_outbound_row.py  test_avelum_fixture_smoke.py  test_checkpointer_postgres.py  test_compiler_with_kb_and_guardrails.py  test_completion_rule_fires_e2e.py  test_console_inbox_routes.py  test_console_leads_page.py  test_console_login_flow.py  test_console_me.py  test_console_rbac.py  test_console_talks.py  test_db_extensions.py  test_event_model.py  test_follow_up_cancellation_on_inbound.py  test_follow_up_jobs_model.py  test_follow_up_scanner_basic.py  test_follow_up_scanner_race_belt.py  test_follow_up_scheduler_helpers.py  test_follow_up_treeflow_loader.py  test_follow_ups_cli_integration.py  test_form_ingestion.py  test_guardrails_critic.py  test_health_endpoint.py  test_hitl_send.py  test_hitl_takeover.py  test_human_optout.py  test_humanization_e2e_3_chunks_with_delays.py  test_inbound_concat_window.py  test_inbound_messages_rls.py  test_inbox_filters.py  test_inbox_hub.py  test_inbox_repository.py  (+98 more)
tests/unit/: conftest.py  test_action_adapter_base.py  test_action_dispatcher.py  test_action_execution_model.py  test_action_execution_repository_signatures.py  test_action_factory.py  test_action_registry.py  test_action_status_literal_source_of_truth.py  test_action_templating.py  test_close_lifecycle.py  test_console_auth_cookie.py  test_console_auth_deps.py  (+109 more)
(+295 files in other folders)
